<resources>
	<string name="app_name">NoteBamboo</string>
	<string name="version" translatable="false">version : 1.2.1 alpha</string>
	<string name="add_note_button">Add note</string>
	<string name="id_hint">ID</string>
	<string name="password_hint">Password</string>
	<string name="login_button">Login</string>
	<string name="add_list_button">add List</string>
	<string name="profile">Profile</string>
	<string name="notification">Notification</string>
	<string name="empty">(Empty)</string>
	<string name="accept">Accept</string>
	<string name="decline">decline</string>
	<string name="nickname_hint">Nickname</string>
	<string name="email_hint">Email(optional)</string>
	<string name="register_textView">Are you new here? [Register]</string>
	<string name="register_button">Register</string>
	<string name="settings">Settings</string>
	<string name="settings_change_nickname">Change nickname</string>
	<string name="settings_logout">Logout</string>
	<string name="settings_share_settings">Share settings</string>
	<string name="settings_change_title">Change title</string>
	<string name="settings_delete_this_list">Delete this list</string>
	<string name="share_list">Share list</string>
	<string name="invite_button">Invite</string>
	<string name="share_add">Share add</string>
	<string name="search_id_button">Search ID</string>
	<string name="level_1" translatable="false">Level 1</string>
	<string name="level_2" translatable="false">Level 2</string>
	<string name="level_3" translatable="false">Level 3</string>
	<string name="confirm">Confirm</string>
	<string name="version_list">Version list</string>
	<string name="alive_end_in_server">Alive End in Server</string>
	<string name="local_memory">Local Memory</string>
	<string name="no_version_saved">No version saved</string>
	<string name="check_delete">you are going to delete this.\nAre you sure?</string>
	<string name="check_change">Changed things will not be saved.\nAre you sure?</string>
	<string name="input_the_title">Input the title</string>
	<string name="check_merge">You are going to try merging this\ninto the latest version.\nAre you sure?</string>
</resources>