<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ShareAddActivity">

	<TextView
		android:id="@+id/settingTitle3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:gravity="center"
		android:text="@string/share_add"
		android:textSize="30sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/searchID"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="100dp"
		android:ems="10"
		android:hint="@string/search_id_button"
		android:inputType="textPersonName"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.497"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/settingTitle3" />

	<ImageView
		android:id="@+id/searchButton"
		android:layout_width="32dp"
		android:layout_height="32dp"
		android:layout_marginStart="4dp"
		android:layout_marginTop="112dp"
		app:layout_constraintStart_toEndOf="@+id/searchID"
		app:layout_constraintTop_toBottomOf="@+id/settingTitle3"
		app:srcCompat="@drawable/search" />

	<TextView
		android:id="@+id/nameView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="28dp"
		android:textSize="30sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/searchID" />

	<TextView
		android:id="@+id/idView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/nameView" />

	<RadioGroup
		android:id="@+id/levelView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="50dp"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/idView">

		<RadioButton
			android:id="@+id/level1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="4dp"
			android:text="@string/level_1" />

		<RadioButton
			android:id="@+id/level2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="4dp"
			android:layout_weight="1"
			android:text="@string/level_2" />

		<RadioButton
			android:id="@+id/level3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="4dp"
			android:layout_weight="1"
			android:text="@string/level_3" />

	</RadioGroup>

	<Button
		android:id="@+id/confirmButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="124dp"
		android:text="@string/confirm"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/idView" />

</androidx.constraintlayout.widget.ConstraintLayout>