<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".SettingsActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/listBack"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/settingTitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:gravity="center"
				android:text="@string/settings"
				android:textSize="30sp" />

			<LinearLayout
				android:id="@+id/changeNickname"
				android:layout_width="match_parent"
				android:layout_height="100dp"
				android:layout_margin="10dp"
				android:background="#CFFFF4"
				android:gravity="center"
				android:onClick="nickname"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/dialogTextView2"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_margin="20dp"
					android:layout_weight="1"
					android:text="@string/settings_change_nickname"
					android:textSize="30sp" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/logout"
				android:layout_width="match_parent"
				android:layout_height="100dp"
				android:layout_margin="10dp"
				android:background="#E4FFC9"
				android:gravity="center"
				android:onClick="logout"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/dialogTextView"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_margin="20dp"
					android:layout_weight="1"
					android:text="@string/settings_logout"
					android:textSize="30sp" />
			</LinearLayout>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="200dp">

				<TextView
					android:id="@+id/textView4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginTop="16dp"
					android:text="Developed by Octo Moon (student)\nEmail : octahedron00@gmail.com"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/textView6" />

				<TextView
					android:id="@+id/textView5"
					android:layout_width="wrap_content"
					android:layout_height="17dp"
					android:layout_marginTop="16dp"
					android:layout_marginEnd="16dp"
					android:text="@string/version"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/textView6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginTop="16dp"
					android:text="@string/app_name"
					android:textSize="27sp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>

		</LinearLayout>
	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>