<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".VersionActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/VersionTitle"
				android:layout_width="match_parent"
				android:layout_height="100sp"
				android:layout_margin="10dp"
				android:gravity="center"
				android:text="@string/version_list"
				android:textSize="30sp" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#DAFFB6"
				android:orientation="vertical">

				<TextView
					android:id="@+id/textView8"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="@string/alive_end_in_server"
					android:textSize="24sp" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/VersionContainerTop"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#DADADA"
				android:orientation="vertical">

				<TextView
					android:id="@+id/textView11"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="@string/local_memory"
					android:textSize="24sp" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/VersionContainerBottom"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">

			</LinearLayout>
		</LinearLayout>
	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>